--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -423,8 +423,8 @@
       "versioning": "regex:^((?<compatibility>[a-z-]+)|((?<major>\\d+)\\.(?<minor>\\d+)))\\-(?<patch>\\d+)\\.(?<build>\\d+)(@(?<currentDigest>sha256:[a-f0-9]+))?$"
     },
     {
-      "groupName": "all lvh-images main",
-      "groupSlug": "all-lvh-images-main",
+      "groupName": "all lvh-images",
+      "groupSlug": "all-lvh-images",
       "matchPackageNames": [
         "quay.io/lvh-images/kind"
       ],
@@ -433,6 +433,38 @@
         "patch",
         "pin",
         "pinDigest"
+      ],
+    },
+    {
+      // Do not allow updates for bpf-next images on stable branches.
+      "enabled": false,
+      "groupName": "stable lvh-images",
+      "groupSlug": "stable-lvh-images",
+      "matchPackageNames": [
+        "quay.io/lvh-images/kind"
+      ],
+      "allowedVersions": "/bpf-next-.*/",
+      "matchBaseBranches": [
+        "v1.15",
+        "v1.14",
+        "v1.13",
+        "v1.12"
+      ],
+    },
+    {
+      "groupName": "next lvh-images",
+      "groupSlug": "next-lvh-images",
+      "matchPackageNames": [
+        "quay.io/lvh-images/kind"
+      ],
+      "matchUpdateTypes": [
+        "digest",
+        "patch",
+        "pin",
+        "pinDigest"
+      ],
+      "matchBaseBranches": [
+        "main"
       ],
     },
     {
