--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -162,6 +162,7 @@ jobs:
       - name: Prepare environment
         timeout-minutes: 15
         run: |
+          # renovate: datasource=github-releases depName=mfridman/tparse
           go install github.com/mfridman/tparse@28967170dce4f9f13de77ec857f7aed4c4294a5f # v0.12.3 (main) with -progress
 
       - name: Run integration tests
